css/style.css
html {
    height: 100%;
    width: 100%;
  }
  
  /* Body Rules */
  body {
    font-family: "urbane-adscript", sans-serif;
    background-color: black;
    color: white;
    border: 3px solid white; 
  }
  /* Class Selects */
  
  .image {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

.image img {
    max-width: 45vw;
    height: auto;
    border: 5px solid white; 
}

.text-box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    margin-left: 100px;
    max-width: 50vw;}
  
  /* Element Selectors */
  
  h1 {
    color: white;
  }
  p {
    color: white;
  }
  a {
    color: white;
    text-decoration: none;
  }

  a:hover{color:orange}
  
  footer {position: static;
    bottom:auto o;
    left: 0;
    width: 100%;
    text-align: center; /* Center align the content */
    padding: 200px 0; /* Adjust padding as needed */}

